--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,11 @@
                   <ws>win32</ws>
                   <arch>aarch64</arch>
                 </environment>
+                <environment>
+                  <os>win32</os>
+                  <ws>gtk</ws>
+                  <arch>x86_64</arch>
+                </environment>
               </environments>
             </configuration>
           </plugin>
