Reduce Win32 FontRegistries visibility and move tests inside fragment
The classes DefaultSWTFontRegistry and ScalingSWTFontRegistry are
currently public only to make them testable from a test bundle. There is
currently no pre-configured way to implement unit tests for classes that
are not directly accessible via public API.

With this change, the SWT Win32 fragments are extended by a
configuration for providing fragment-internal unit tests executed with
plain Maven surefire, which can access the classes under test even with
reduced visibility. Due to current limitation in Tycho, an according
temporary extension to the Maven configuration for the binaries projects
is made. This configuration is applied to the tests for the
DefaultSWTFontRegistry and ScalingSWTFontRegistry, such that their
visibilities can properly be reduced to package visibility.

--- a/binaries/org.eclipse.swt.win32.win32.aarch64/build.properties
+++ b/binaries/org.eclipse.swt.win32.win32.aarch64/build.properties
@@ -39,3 +39,6 @@ output.. = bin/
 pom.model.property.os=win32
 pom.model.property.ws=win32
 pom.model.property.arch=aarch64
+
+# To be removed once linked .classpath files are supported by Tycho, see https://github.com/eclipse-tycho/tycho/issues/3803
+pom.model.property.localTestsSourceDirectory=../../bundles/org.eclipse.swt/Eclipse SWT Tests/win32
