--- a/pom.xml
+++ b/pom.xml
@@ -170,12 +170,7 @@
                 <environment>
                   <os>win32</os>
                   <ws>win32</ws>
-                  <arch>x86_64</arch>
-                </environment>
-                <environment>
-                  <os>win32</os>
-                  <ws>win32</ws>
-                  <arch>aarch64</arch>
+                  <arch>${os.arch}</arch>
                 </environment>
               </environments>
             </configuration>
